feat: update langs

--- a/lang/bn.json
+++ b/lang/bn.json
@@ -419,6 +419,7 @@
     "Exception:": "ব্যতিক্রম:",
     "Existing company": "বিদ্যমান কোম্পানি",
     "External connections": "বাহ্যিক সংযোগ",
+    "Facebook": "ফেসবুক",
     "Family": "পরিবার",
     "Family summary": "পারিবারিক সারাংশ",
     "Favorites": "প্রিয়",
@@ -564,6 +565,7 @@
     "Life event types and categories": "জীবন ঘটনা প্রকার এবং বিভাগ",
     "Life metrics": "লাইফ মেট্রিক্স",
     "Life metrics let you track metrics that are important to you.": "লাইফ মেট্রিক্স আপনাকে আপনার জন্য গুরুত্বপূর্ণ মেট্রিক্স ট্র্যাক করতে দেয়।",
+    "LinkedIn": "লিঙ্কডইন",
     "Link to documentation": "ডকুমেন্টেশন লিঙ্ক",
     "List of addresses": "ঠিকানার তালিকা",
     "List of addresses of the contacts in the vault": "ভল্টে পরিচিতির ঠিকানার তালিকা",
@@ -612,6 +614,7 @@
     "Manage Team": "দল পরিচালনা করুন",
     "Manage templates": "টেমপ্লেট পরিচালনা করুন",
     "Manage users": "ব্যবহারকারীদের ম্যানেজ করুন",
+    "Mastodon": "মাস্টোডন",
     "Maybe one of these contacts?": "হয়তো এই পরিচিতি এক?",
     "mentor": "পরামর্শদাতা",
     "Middle name": "মধ্য নাম",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "ঋণ কি?",
     "What permission should :name have?": "কি অনুমতি দেওয়া উচিত :নাম আছে?",
     "What permission should the user have?": "ব্যবহারকারীর কি অনুমতি থাকা উচিত?",
+    "Whatsapp": "হোয়াটসঅ্যাপ",
     "What should we use to display maps?": "মানচিত্র প্রদর্শন করতে আমাদের কী ব্যবহার করা উচিত?",
     "What would make today great?": "কি আজ মহান করতে হবে?",
     "When did the call happened?": "কখন কল হয়েছিল?",
