--- a/lang/ca.json
+++ b/lang/ca.json
@@ -419,6 +419,7 @@
     "Exception:": "Excepció:",
     "Existing company": "Empresa existent",
     "External connections": "Connexions externes",
+    "Facebook": "Facebook",
     "Family": "Família",
     "Family summary": "Resum familiar",
     "Favorites": "Preferits",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Tipus i categories d'esdeveniments vitals",
     "Life metrics": "Mètriques de vida",
     "Life metrics let you track metrics that are important to you.": "Les mètriques de vida et permeten fer un seguiment de les mètriques que són importants per a tu.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Enllaç a la documentació",
     "List of addresses": "Llista d'adreces",
     "List of addresses of the contacts in the vault": "Llista d'adreces dels contactes de la volta",
@@ -612,6 +614,7 @@
     "Manage Team": "Gestionar l'equip",
     "Manage templates": "Gestionar plantilles",
     "Manage users": "Gestionar usuaris",
+    "Mastodon": "Mastodont",
     "Maybe one of these contacts?": "Potser un d'aquests contactes?",
     "mentor": "mentor",
     "Middle name": "Segon nom",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Què és el préstec?",
     "What permission should :name have?": "Quin permís hauria de tenir :name?",
     "What permission should the user have?": "Quin permís ha de tenir l'usuari?",
+    "Whatsapp": "què tal",
     "What should we use to display maps?": "Què hem d'utilitzar per mostrar els mapes?",
     "What would make today great?": "Què faria genial avui?",
     "When did the call happened?": "Quan va passar la trucada?",
