--- a/lang/da.json
+++ b/lang/da.json
@@ -419,6 +419,7 @@
     "Exception:": "Undtagelse:",
     "Existing company": "Eksisterende virksomhed",
     "External connections": "Eksterne forbindelser",
+    "Facebook": "Facebook",
     "Family": "Familie",
     "Family summary": "Familieoversigt",
     "Favorites": "Favoritter",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Livsbegivenhedstyper og kategorier",
     "Life metrics": "Livsmålinger",
     "Life metrics let you track metrics that are important to you.": "Livsmålinger giver dig mulighed for at spore målinger, der er vigtige for dig.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Link til dokumentation",
     "List of addresses": "Liste over adresser",
     "List of addresses of the contacts in the vault": "Liste over adresser på kontakterne i boksen",
@@ -612,6 +614,7 @@
     "Manage Team": "Administrer team",
     "Manage templates": "Administrer skabeloner",
     "Manage users": "Administrer brugere",
+    "Mastodon": "Mastodont",
     "Maybe one of these contacts?": "Måske en af ​​disse kontakter?",
     "mentor": "mentor",
     "Middle name": "Mellemnavn",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Hvad er lånet?",
     "What permission should :name have?": "Hvilken tilladelse skal :name have?",
     "What permission should the user have?": "Hvilken tilladelse skal brugeren have?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "Hvad skal vi bruge til at vise kort?",
     "What would make today great?": "Hvad ville gøre i dag fantastisk?",
     "When did the call happened?": "Hvornår skete opkaldet?",
