--- a/lang/de.json
+++ b/lang/de.json
@@ -419,6 +419,7 @@
     "Exception:": "Ausnahme:",
     "Existing company": "Vorhandenes Unternehmen",
     "External connections": "Externe Verbindungen",
+    "Facebook": "Facebook",
     "Family": "Familie",
     "Family summary": "Familienzusammenfassung",
     "Favorites": "Favoriten",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Lebensereignistypen und -kategorien",
     "Life metrics": "Lebensmetriken",
     "Life metrics let you track metrics that are important to you.": "Lebensmetriken ermöglichen es Ihnen, Metriken zu verfolgen, die für Sie wichtig sind.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Link zur Dokumentation",
     "List of addresses": "Liste der Adressen",
     "List of addresses of the contacts in the vault": "Liste der Adressen der Kontakte im Tresor",
@@ -612,6 +614,7 @@
     "Manage Team": "Team verwalten",
     "Manage templates": "Vorlagen verwalten",
     "Manage users": "Benutzer verwalten",
+    "Mastodon": "Mastodon",
     "Maybe one of these contacts?": "Vielleicht einer dieser Kontakte?",
     "mentor": "Mentor",
     "Middle name": "Zweiter Vorname",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Was ist der Kredit?",
     "What permission should :name have?": "Welche Berechtigung soll :name haben?",
     "What permission should the user have?": "Welche Berechtigung soll der Benutzer haben?",
+    "Whatsapp": "WhatsApp",
     "What should we use to display maps?": "Welchen Dienst sollten wir verwenden, um Karten anzuzeigen?",
     "What would make today great?": "Was würde diesen Tag großartig machen?",
     "When did the call happened?": "Wann hat der Anruf stattgefunden?",
