--- a/lang/el.json
+++ b/lang/el.json
@@ -419,6 +419,7 @@
     "Exception:": "Εξαίρεση:",
     "Existing company": "Υπάρχουσα εταιρεία",
     "External connections": "Εξωτερικές συνδέσεις",
+    "Facebook": "Facebook",
     "Family": "Οικογένεια",
     "Family summary": "Περίληψη της οικογένειας",
     "Favorites": "Αγαπημένα",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Τύποι και κατηγορίες συμβάντων ζωής",
     "Life metrics": "Μετρήσεις ζωής",
     "Life metrics let you track metrics that are important to you.": "Οι μετρήσεις ζωής σάς επιτρέπουν να παρακολουθείτε μετρήσεις που είναι σημαντικές για εσάς.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Σύνδεσμος με την τεκμηρίωση",
     "List of addresses": "Κατάλογος διευθύνσεων",
     "List of addresses of the contacts in the vault": "Λίστα διευθύνσεων των επαφών στο θησαυροφυλάκιο",
@@ -612,6 +614,7 @@
     "Manage Team": "Διαχείριση ομάδας",
     "Manage templates": "Διαχείριση προτύπων",
     "Manage users": "Διαχείριση χρηστών",
+    "Mastodon": "Μαστόδοντας",
     "Maybe one of these contacts?": "Ίσως μία από αυτές τις επαφές;",
     "mentor": "μέντορας",
     "Middle name": "Μεσαίο όνομα",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Τι είναι το δάνειο;",
     "What permission should :name have?": "Τι άδεια πρέπει να έχει το :name;",
     "What permission should the user have?": "Τι άδεια πρέπει να έχει ο χρήστης;",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "Τι πρέπει να χρησιμοποιήσουμε για να εμφανίσουμε τους χάρτες;",
     "What would make today great?": "Τι θα έκανε το σήμερα υπέροχο;",
     "When did the call happened?": "Πότε έγινε η κλήση;",
