--- a/lang/es.json
+++ b/lang/es.json
@@ -419,6 +419,7 @@
     "Exception:": "Excepción:",
     "Existing company": "Empresa existente",
     "External connections": "Conexiones externas",
+    "Facebook": "Facebook",
     "Family": "Familia",
     "Family summary": "Resumen familiar",
     "Favorites": "Favoritos",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Tipos y categorías de eventos de la vida",
     "Life metrics": "Métricas de vida",
     "Life metrics let you track metrics that are important to you.": "Las métricas de vida te permiten rastrear métricas que son importantes para ti.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Enlace a la documentación",
     "List of addresses": "Lista de direcciones",
     "List of addresses of the contacts in the vault": "Lista de direcciones de los contactos en la bóveda",
@@ -612,6 +614,7 @@
     "Manage Team": "Administrar equipo",
     "Manage templates": "Gestionar plantillas:",
     "Manage users": "Administrar usuarios",
+    "Mastodon": "Mastodonte",
     "Maybe one of these contacts?": "¿Quizás uno de estos contactos?",
     "mentor": "mentor",
     "Middle name": "Segundo nombre",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "¿Qué es el préstamo?",
     "What permission should :name have?": "¿Qué permisos debería tener :name?",
     "What permission should the user have?": "¿Qué permisos debería tener el usuario?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "¿Qué deberíamos usar para mostrar mapas?",
     "What would make today great?": "¿Qué haría que hoy fuera genial?",
     "When did the call happened?": "¿Cuándo ocurrió la llamada?",
