--- a/lang/fr.json
+++ b/lang/fr.json
@@ -419,6 +419,7 @@
     "Exception:": "Exception :",
     "Existing company": "Entreprise existante",
     "External connections": "Connexions externes",
+    "Facebook": "Facebook",
     "Family": "Famille",
     "Family summary": "Résumé de la famille",
     "Favorites": "Favoris",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Types et catégories d’événements de la vie",
     "Life metrics": "Métriques de vie",
     "Life metrics let you track metrics that are important to you.": "Les métriques de vie vous permettent de suivre les métriques qui vous sont importantes.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Lien vers la documentation",
     "List of addresses": "Liste des adresses",
     "List of addresses of the contacts in the vault": "Liste des adresses des contacts dans la voûte",
@@ -612,6 +614,7 @@
     "Manage Team": "Gérer l’équipe",
     "Manage templates": "Gérer les modèles",
     "Manage users": "Gérer les utilisateurs",
+    "Mastodon": "Mastodonte",
     "Maybe one of these contacts?": "Peut-être un de ces contacts ?",
     "mentor": "mentor",
     "Middle name": "Deuxième prénom",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Quel est le prêt ?",
     "What permission should :name have?": "Quelle autorisation :name doit-il avoir ?",
     "What permission should the user have?": "Quelle autorisation l’utilisateur doit-il avoir ?",
+    "Whatsapp": "WhatsApp",
     "What should we use to display maps?": "Que devons-nous utiliser pour afficher les cartes ?",
     "What would make today great?": "Qu’est-ce qui rendrait aujourd’hui formidable ?",
     "When did the call happened?": "Quand l’appel a-t-il eu lieu ?",
