--- a/lang/he.json
+++ b/lang/he.json
@@ -419,6 +419,7 @@
     "Exception:": "יוצא מן הכלל:",
     "Existing company": "חברה קיימת",
     "External connections": "חיבורים חיצוניים",
+    "Facebook": "פייסבוק",
     "Family": "מִשׁפָּחָה",
     "Family summary": "סיכום משפחתי",
     "Favorites": "מועדפים",
@@ -564,6 +565,7 @@
     "Life event types and categories": "סוגי אירועי חיים וקטגוריות",
     "Life metrics": "מדדי חיים",
     "Life metrics let you track metrics that are important to you.": "מדדי חיים מאפשרים לך לעקוב אחר מדדים שחשובים לך.",
+    "LinkedIn": "לינקדאין",
     "Link to documentation": "קישור לתיעוד",
     "List of addresses": "רשימת כתובות",
     "List of addresses of the contacts in the vault": "רשימת הכתובות של אנשי הקשר בכספת",
@@ -612,6 +614,7 @@
     "Manage Team": "ניהול צוות",
     "Manage templates": "נהל תבניות",
     "Manage users": "נהל משתמשים",
+    "Mastodon": "מסטודון",
     "Maybe one of these contacts?": "אולי אחד מאנשי הקשר האלה?",
     "mentor": "מנטור",
     "Middle name": "שם אמצעי",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "מהי ההלוואה?",
     "What permission should :name have?": "איזו הרשאה צריכה להיות ל-:name?",
     "What permission should the user have?": "איזו הרשאה צריכה להיות למשתמש?",
+    "Whatsapp": "וואטסאפ",
     "What should we use to display maps?": "במה עלינו להשתמש כדי להציג מפות?",
     "What would make today great?": "מה יהפוך את היום לגדול?",
     "When did the call happened?": "מתי קרתה השיחה?",
