--- a/lang/hi.json
+++ b/lang/hi.json
@@ -419,6 +419,7 @@
     "Exception:": "अपवाद:",
     "Existing company": "मौजूदा कंपनी",
     "External connections": "बाहरी कनेक्शन",
+    "Facebook": "फेसबुक",
     "Family": "परिवार",
     "Family summary": "पारिवारिक सारांश",
     "Favorites": "पसंदीदा",
@@ -564,6 +565,7 @@
     "Life event types and categories": "जीवन घटना प्रकार और श्रेणियां",
     "Life metrics": "जीवन मेट्रिक्स",
     "Life metrics let you track metrics that are important to you.": "लाइफ मेट्रिक्स आपको उन मेट्रिक्स को ट्रैक करने देता है जो आपके लिए महत्वपूर्ण हैं।",
+    "LinkedIn": "Linkedin",
     "Link to documentation": "दस्तावेज़ीकरण से लिंक करें",
     "List of addresses": "पतों की सूची",
     "List of addresses of the contacts in the vault": "तिजोरी में संपर्कों के पतों की सूची",
@@ -612,6 +614,7 @@
     "Manage Team": "टीम प्रबंधित करें",
     "Manage templates": "टेम्प्लेट प्रबंधित करें",
     "Manage users": "उपयोगकर्ताओं को प्रबंधित करें",
+    "Mastodon": "मेस्टोडोन",
     "Maybe one of these contacts?": "शायद इनमें से एक संपर्क?",
     "mentor": "उपदेशक",
     "Middle name": "मध्य नाम",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "ऋण क्या है?",
     "What permission should :name have?": "क्या अनुमति होनी चाहिए: नाम के पास?",
     "What permission should the user have?": "उपयोगकर्ता के पास क्या अनुमति होनी चाहिए?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "मानचित्र प्रदर्शित करने के लिए हमें किसका उपयोग करना चाहिए?",
     "What would make today great?": "क्या आज को महान बनाएगा?",
     "When did the call happened?": "कॉल कब हुआ?",
