--- a/lang/it.json
+++ b/lang/it.json
@@ -419,6 +419,7 @@
     "Exception:": "Eccezione:",
     "Existing company": "Azienda esistente",
     "External connections": "Connessioni esterne",
+    "Facebook": "Facebook",
     "Family": "Famiglia",
     "Family summary": "Sommario familiare",
     "Favorites": "Preferiti",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Tipi e categorie di eventi di vita",
     "Life metrics": "Metriche di vita",
     "Life metrics let you track metrics that are important to you.": "Le metriche di vita ti consentono di tenere traccia delle metriche che sono importanti per te.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Link alla documentazione",
     "List of addresses": "Elenco degli indirizzi",
     "List of addresses of the contacts in the vault": "Elenco degli indirizzi dei contatti nella cassaforte",
@@ -612,6 +614,7 @@
     "Manage Team": "Gestisci Team",
     "Manage templates": "Gestisci i template",
     "Manage users": "Gestisci utenti",
+    "Mastodon": "Mastodonte",
     "Maybe one of these contacts?": "Forse uno di questi contatti?",
     "mentor": "mentore",
     "Middle name": "Secondo nome",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Di cosa si tratta il prestito?",
     "What permission should :name have?": "Quale permesso dovrebbe avere :name?",
     "What permission should the user have?": "Quale permesso dovrebbe avere l'utente?",
+    "Whatsapp": "WhatsApp",
     "What should we use to display maps?": "Cosa dovremmo usare per visualizzare le mappe?",
     "What would make today great?": "Cosa renderebbe oggi fantastico?",
     "When did the call happened?": "Quando è avvenuta la chiamata?",
