--- a/lang/ja.json
+++ b/lang/ja.json
@@ -419,6 +419,7 @@
     "Exception:": "例外：",
     "Existing company": "既存の会社",
     "External connections": "外部接続",
+    "Facebook": "フェイスブック",
     "Family": "家族",
     "Family summary": "家族の概要",
     "Favorites": "お気に入り",
@@ -564,6 +565,7 @@
     "Life event types and categories": "ライフイベントの種類とカテゴリ",
     "Life metrics": "ライフメトリクス",
     "Life metrics let you track metrics that are important to you.": "ライフ メトリクスを使用すると、自分にとって重要なメトリクスを追跡できます。",
+    "LinkedIn": "リンクトイン",
     "Link to documentation": "ドキュメントへのリンク",
     "List of addresses": "アドレス一覧",
     "List of addresses of the contacts in the vault": "ボールト内の連絡先のアドレスのリスト",
@@ -612,6 +614,7 @@
     "Manage Team": "チームの管理",
     "Manage templates": "テンプレートの管理",
     "Manage users": "ユーザーの管理",
+    "Mastodon": "マストドン",
     "Maybe one of these contacts?": "多分これらの連絡先の1つですか？",
     "mentor": "メンター",
     "Middle name": "ミドルネーム",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "ローンとは何ですか？",
     "What permission should :name have?": ":name にはどのような権限が必要ですか?",
     "What permission should the user have?": "ユーザーにはどのような権限が必要ですか?",
+    "Whatsapp": "ワッツアップ",
     "What should we use to display maps?": "マップを表示するには何を使用すればよいですか?",
     "What would make today great?": "今日を素晴らしいものにするものは何でしょうか？",
     "When did the call happened?": "電話がかかってきたのはいつですか？",
