--- a/lang/ml.json
+++ b/lang/ml.json
@@ -419,6 +419,7 @@
     "Exception:": "ഒഴിവാക്കൽ:",
     "Existing company": "നിലവിലുള്ള കമ്പനി",
     "External connections": "ബാഹ്യ കണക്ഷനുകൾ",
+    "Facebook": "ഫേസ്ബുക്ക്",
     "Family": "കുടുംബം",
     "Family summary": "കുടുംബ സംഗ്രഹം",
     "Favorites": "പ്രിയപ്പെട്ടവ",
@@ -564,6 +565,7 @@
     "Life event types and categories": "ലൈഫ് ഇവന്റ് തരങ്ങളും വിഭാഗങ്ങളും",
     "Life metrics": "ലൈഫ് മെട്രിക്സ്",
     "Life metrics let you track metrics that are important to you.": "നിങ്ങൾക്ക് പ്രധാനപ്പെട്ട അളവുകൾ ട്രാക്ക് ചെയ്യാൻ ലൈഫ് മെട്രിക്‌സ് നിങ്ങളെ അനുവദിക്കുന്നു.",
+    "LinkedIn": "ലിങ്ക്ഡ്ഇൻ",
     "Link to documentation": "ഡോക്യുമെന്റേഷനിലേക്കുള്ള ലിങ്ക്",
     "List of addresses": "വിലാസങ്ങളുടെ പട്ടിക",
     "List of addresses of the contacts in the vault": "നിലവറയിലെ കോൺടാക്റ്റുകളുടെ വിലാസങ്ങളുടെ ലിസ്റ്റ്",
@@ -612,6 +614,7 @@
     "Manage Team": "ടീം നിയന്ത്രിക്കുക",
     "Manage templates": "ടെംപ്ലേറ്റുകൾ നിയന്ത്രിക്കുക",
     "Manage users": "ഉപയോക്താക്കളെ നിയന്ത്രിക്കുക",
+    "Mastodon": "മാസ്റ്റോഡോൺ",
     "Maybe one of these contacts?": "ഒരുപക്ഷേ ഈ കോൺടാക്റ്റുകളിൽ ഒന്നാണോ?",
     "mentor": "ഉപദേശകൻ",
     "Middle name": "പേരിന്റെ മധ്യഭാഗം",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "എന്താണ് വായ്പ?",
     "What permission should :name have?": "എന്ത് അനുമതി വേണം: പേരിന്?",
     "What permission should the user have?": "ഉപയോക്താവിന് എന്ത് അനുമതി ഉണ്ടായിരിക്കണം?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "മാപ്പുകൾ പ്രദർശിപ്പിക്കാൻ നമ്മൾ എന്താണ് ഉപയോഗിക്കേണ്ടത്?",
     "What would make today great?": "ഇന്നത്തെ ദിവസം എന്തു മഹത്തരമാക്കും?",
     "When did the call happened?": "എപ്പോഴാണ് കോൾ സംഭവിച്ചത്?",
