--- a/lang/nl.json
+++ b/lang/nl.json
@@ -419,6 +419,7 @@
     "Exception:": "Uitzondering:",
     "Existing company": "Bestaand bedrijf",
     "External connections": "Externe verbindingen",
+    "Facebook": "Facebook",
     "Family": "Familie",
     "Family summary": "Familie samenvatting",
     "Favorites": "Favorieten",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Typen en categorieën levensgebeurtenissen",
     "Life metrics": "Levensstatistieken",
     "Life metrics let you track metrics that are important to you.": "Met levensstatistieken kunt u statistieken bijhouden die belangrijk voor u zijn.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Link naar documentatie",
     "List of addresses": "Lijst met adressen",
     "List of addresses of the contacts in the vault": "Lijst met adressen van de contacten in de kluis",
@@ -612,6 +614,7 @@
     "Manage Team": "Team beheren",
     "Manage templates": "Sjablonen beheren",
     "Manage users": "Gebruikers beheren",
+    "Mastodon": "Mastodont",
     "Maybe one of these contacts?": "Misschien een van deze contacten?",
     "mentor": "mentor",
     "Middle name": "Midden-naam",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Wat is de lening?",
     "What permission should :name have?": "Welke rechten moet :naam hebben?",
     "What permission should the user have?": "Welke rechten moet de gebruiker hebben?",
+    "Whatsapp": "WhatsApp",
     "What should we use to display maps?": "Wat moeten we gebruiken om kaarten weer te geven?",
     "What would make today great?": "Wat zou vandaag geweldig maken?",
     "When did the call happened?": "Wanneer is de oproep gebeurd?",
