--- a/lang/pa.json
+++ b/lang/pa.json
@@ -419,6 +419,7 @@
     "Exception:": "ਅਪਵਾਦ:",
     "Existing company": "ਮੌਜੂਦਾ ਕੰਪਨੀ",
     "External connections": "ਬਾਹਰੀ ਕਨੈਕਸ਼ਨ",
+    "Facebook": "ਫੇਸਬੁੱਕ",
     "Family": "ਪਰਿਵਾਰ",
     "Family summary": "ਪਰਿਵਾਰਕ ਸੰਖੇਪ",
     "Favorites": "ਮਨਪਸੰਦ",
@@ -564,6 +565,7 @@
     "Life event types and categories": "ਜੀਵਨ ਘਟਨਾ ਦੀਆਂ ਕਿਸਮਾਂ ਅਤੇ ਸ਼੍ਰੇਣੀਆਂ",
     "Life metrics": "ਜੀਵਨ ਮਾਪਦੰਡ",
     "Life metrics let you track metrics that are important to you.": "ਜੀਵਨ ਮੈਟ੍ਰਿਕਸ ਤੁਹਾਨੂੰ ਉਹਨਾਂ ਮੈਟ੍ਰਿਕਸ ਨੂੰ ਟਰੈਕ ਕਰਨ ਦਿੰਦੇ ਹਨ ਜੋ ਤੁਹਾਡੇ ਲਈ ਮਹੱਤਵਪੂਰਨ ਹਨ।",
+    "LinkedIn": "ਲਿੰਕਡਇਨ",
     "Link to documentation": "ਦਸਤਾਵੇਜ਼ ਲਈ ਲਿੰਕ",
     "List of addresses": "ਪਤਿਆਂ ਦੀ ਸੂਚੀ",
     "List of addresses of the contacts in the vault": "ਵਾਲਟ ਵਿੱਚ ਸੰਪਰਕਾਂ ਦੇ ਪਤਿਆਂ ਦੀ ਸੂਚੀ",
@@ -612,6 +614,7 @@
     "Manage Team": "ਟੀਮ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ",
     "Manage templates": "ਟੈਂਪਲੇਟਾਂ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ",
     "Manage users": "ਉਪਭੋਗਤਾਵਾਂ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ",
+    "Mastodon": "ਮਾਸਟੌਡਨ",
     "Maybe one of these contacts?": "ਹੋ ਸਕਦਾ ਹੈ ਕਿ ਇਹਨਾਂ ਵਿੱਚੋਂ ਇੱਕ ਸੰਪਰਕ?",
     "mentor": "ਸਲਾਹਕਾਰ",
     "Middle name": "ਵਿਚਕਾਰਲਾ ਨਾਂ",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "ਕਰਜ਼ਾ ਕੀ ਹੈ?",
     "What permission should :name have?": "ਕੀ ਇਜਾਜ਼ਤ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ :ਨਾਮ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ?",
     "What permission should the user have?": "ਉਪਭੋਗਤਾ ਨੂੰ ਕਿਹੜੀ ਇਜਾਜ਼ਤ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "ਸਾਨੂੰ ਨਕਸ਼ੇ ਦਿਖਾਉਣ ਲਈ ਕੀ ਵਰਤਣਾ ਚਾਹੀਦਾ ਹੈ?",
     "What would make today great?": "ਕੀ ਅੱਜ ਨੂੰ ਮਹਾਨ ਬਣਾਵੇਗਾ?",
     "When did the call happened?": "ਕਾਲ ਕਦੋਂ ਹੋਈ?",
