--- a/lang/pl.json
+++ b/lang/pl.json
@@ -419,6 +419,7 @@
     "Exception:": "Wyjątek:",
     "Existing company": "Istniejąca firma",
     "External connections": "Połączenia zewnętrzne",
+    "Facebook": "Facebook",
     "Family": "Rodzina",
     "Family summary": "Podsumowanie rodziny",
     "Favorites": "Ulubione",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Typy i kategorie zdarzeń życiowych",
     "Life metrics": "Metryki życia",
     "Life metrics let you track metrics that are important to you.": "Metryki życia pozwalają śledzić metryki, które są dla Ciebie ważne.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Link do dokumentacji",
     "List of addresses": "Lista adresów",
     "List of addresses of the contacts in the vault": "Lista adresów kontaktów w skarbcu",
@@ -612,6 +614,7 @@
     "Manage Team": "Zarządzaj zespołem",
     "Manage templates": "Zarządzaj szablonami",
     "Manage users": "Zarządzaj użytkownikami",
+    "Mastodon": "Mastodont",
     "Maybe one of these contacts?": "Może któryś z tych kontaktów?",
     "mentor": "mentor",
     "Middle name": "Drugie imię",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Jaka jest pożyczka?",
     "What permission should :name have?": "Jakie uprawnienia powinien mieć :imię?",
     "What permission should the user have?": "Jakie uprawnienia powinien mieć użytkownik?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "Czego powinniśmy używać do wyświetlania map?",
     "What would make today great?": "Co uczyniłoby dzisiejszy dzień wspaniałym?",
     "When did the call happened?": "Kiedy doszło do wezwania?",
