--- a/lang/pt.json
+++ b/lang/pt.json
@@ -419,6 +419,7 @@
     "Exception:": "Exceção:",
     "Existing company": "Empresa existente",
     "External connections": "Conexões externas",
+    "Facebook": "Facebook",
     "Family": "Família",
     "Family summary": "Resumo da família",
     "Favorites": "Favoritos",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Tipos e categorias de eventos de vida",
     "Life metrics": "Métricas de vida",
     "Life metrics let you track metrics that are important to you.": "As métricas de vida permitem que você acompanhe as métricas que são importantes para você.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Link para a documentação",
     "List of addresses": "Lista de endereços",
     "List of addresses of the contacts in the vault": "Lista de endereços dos contatos na caixa forte",
@@ -612,6 +614,7 @@
     "Manage Team": "Gerir Equipa",
     "Manage templates": "Gerenciar modelos",
     "Manage users": "Gerenciar usuários",
+    "Mastodon": "Mastodonte",
     "Maybe one of these contacts?": "Talvez um desses contatos?",
     "mentor": "mentor",
     "Middle name": "Segundo nome",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "O que é o empréstimo?",
     "What permission should :name have?": "Que permissão :name deve ter?",
     "What permission should the user have?": "Que permissão o usuário deve ter?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "O que devemos usar para exibir mapas?",
     "What would make today great?": "O que tornaria hoje ótimo?",
     "When did the call happened?": "Quando a ligação aconteceu?",
