--- a/lang/ro.json
+++ b/lang/ro.json
@@ -419,6 +419,7 @@
     "Exception:": "Excepție:",
     "Existing company": "Firma existenta",
     "External connections": "Conexiuni externe",
+    "Facebook": "Facebook",
     "Family": "Familie",
     "Family summary": "Rezumatul familiei",
     "Favorites": "Favorite",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Tipuri și categorii de evenimente de viață",
     "Life metrics": "Măsuri de viață",
     "Life metrics let you track metrics that are important to you.": "Valorile de viață vă permit să urmăriți valorile care sunt importante pentru dvs.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Link către documentație",
     "List of addresses": "Lista adreselor",
     "List of addresses of the contacts in the vault": "Lista adreselor persoanelor de contact din seif",
@@ -612,6 +614,7 @@
     "Manage Team": "Gestionează echipa",
     "Manage templates": "Gestionați șabloanele",
     "Manage users": "Gestionare Utilizatori",
+    "Mastodon": "Mastodont",
     "Maybe one of these contacts?": "Poate unul dintre aceste contacte?",
     "mentor": "mentor",
     "Middle name": "Al doilea prenume",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Ce este împrumutul?",
     "What permission should :name have?": "Ce permisiune ar trebui să aibă :name?",
     "What permission should the user have?": "Ce permisiune ar trebui să aibă utilizatorul?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "Ce ar trebui să folosim pentru a afișa hărți?",
     "What would make today great?": "Ce ar face astăzi grozav?",
     "When did the call happened?": "Când a avut loc apelul?",
