--- a/lang/ru.json
+++ b/lang/ru.json
@@ -419,6 +419,7 @@
     "Exception:": "Исключение:",
     "Existing company": "Существующая компания",
     "External connections": "Внешние подключения",
+    "Facebook": "Фейсбук",
     "Family": "Семья",
     "Family summary": "Сводка о семье",
     "Favorites": "Избранное",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Типы и категории жизненных событий",
     "Life metrics": "Метрики жизни",
     "Life metrics let you track metrics that are important to you.": "Метрики жизни позволяют отслеживать метрики, которые важны для вас.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Ссылка на документацию",
     "List of addresses": "Список адресов",
     "List of addresses of the contacts in the vault": "Список адресов контактов в хранилище",
@@ -612,6 +614,7 @@
     "Manage Team": "Управление командой",
     "Manage templates": "Управление шаблонами",
     "Manage users": "Управление пользователями",
+    "Mastodon": "Мастодонт",
     "Maybe one of these contacts?": "Возможно, один из этих контактов?",
     "mentor": "наставник",
     "Middle name": "Отчество",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Что такое займ?",
     "What permission should :name have?": "Какое разрешение должно быть у :name?",
     "What permission should the user have?": "Какое разрешение должно быть у пользователя?",
+    "Whatsapp": "WhatsApp",
     "What should we use to display maps?": "Что мы должны использовать для отображения карт?",
     "What would make today great?": "Что сделает сегодня великолепным?",
     "When did the call happened?": "Когда произошел звонок?",
