--- a/lang/sv.json
+++ b/lang/sv.json
@@ -419,6 +419,7 @@
     "Exception:": "Undantag:",
     "Existing company": "Befintligt företag",
     "External connections": "Externa anslutningar",
+    "Facebook": "Facebook",
     "Family": "Familj",
     "Family summary": "Familjesammanfattning",
     "Favorites": "Favoriter",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Livshändelsetyper och kategorier",
     "Life metrics": "Livsmått",
     "Life metrics let you track metrics that are important to you.": "Livsmått låter dig spåra mätvärden som är viktiga för dig.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Länk till dokumentation",
     "List of addresses": "Lista över adresser",
     "List of addresses of the contacts in the vault": "Lista över adresser till kontakterna i valvet",
@@ -612,6 +614,7 @@
     "Manage Team": "Hantera team",
     "Manage templates": "Hantera mallar",
     "Manage users": "Hantera användare",
+    "Mastodon": "Mastodont",
     "Maybe one of these contacts?": "Kanske någon av dessa kontakter?",
     "mentor": "mentor",
     "Middle name": "Mellannamn",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Vad är lånet?",
     "What permission should :name have?": "Vilken behörighet ska :name ha?",
     "What permission should the user have?": "Vilken behörighet ska användaren ha?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "Vad ska vi använda för att visa kartor?",
     "What would make today great?": "Vad skulle göra idag bra?",
     "When did the call happened?": "När kom samtalet?",
