--- a/lang/te.json
+++ b/lang/te.json
@@ -419,6 +419,7 @@
     "Exception:": "మినహాయింపు:",
     "Existing company": "ఇప్పటికే ఉన్న కంపెనీ",
     "External connections": "బాహ్య కనెక్షన్లు",
+    "Facebook": "ఫేస్బుక్",
     "Family": "కుటుంబం",
     "Family summary": "కుటుంబ సారాంశం",
     "Favorites": "ఇష్టమైనవి",
@@ -564,6 +565,7 @@
     "Life event types and categories": "లైఫ్ ఈవెంట్ రకాలు మరియు వర్గాలు",
     "Life metrics": "జీవిత కొలమానాలు",
     "Life metrics let you track metrics that are important to you.": "జీవిత కొలమానాలు మీకు ముఖ్యమైన మెట్రిక్‌లను ట్రాక్ చేయడానికి మిమ్మల్ని అనుమతిస్తాయి.",
+    "LinkedIn": "లింక్డ్ఇన్",
     "Link to documentation": "డాక్యుమెంటేషన్‌కి లింక్",
     "List of addresses": "చిరునామాల జాబితా",
     "List of addresses of the contacts in the vault": "ఖజానాలోని పరిచయాల చిరునామాల జాబితా",
@@ -612,6 +614,7 @@
     "Manage Team": "బృందాన్ని నిర్వహించండి",
     "Manage templates": "టెంప్లేట్‌లను నిర్వహించండి",
     "Manage users": "వినియోగదారులను నిర్వహించండి",
+    "Mastodon": "మాస్టోడాన్",
     "Maybe one of these contacts?": "బహుశా ఈ పరిచయాలలో ఒకటైనా?",
     "mentor": "గురువు",
     "Middle name": "మధ్య పేరు",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "రుణం ఏమిటి?",
     "What permission should :name have?": "పేరుకు ఎలాంటి అనుమతి ఉండాలి?",
     "What permission should the user have?": "వినియోగదారు ఏ అనుమతిని కలిగి ఉండాలి?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "మ్యాప్‌లను ప్రదర్శించడానికి మనం ఏమి ఉపయోగించాలి?",
     "What would make today great?": "ఈరోజును ఏది గొప్పగా చేస్తుంది?",
     "When did the call happened?": "కాల్ ఎప్పుడు జరిగింది?",
