--- a/lang/tr.json
+++ b/lang/tr.json
@@ -419,6 +419,7 @@
     "Exception:": "İstisna:",
     "Existing company": "mevcut şirket",
     "External connections": "Dış bağlantılar",
+    "Facebook": "Facebook",
     "Family": "Aile",
     "Family summary": "Aile özeti",
     "Favorites": "Favoriler",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Yaşam olayı türleri ve kategorileri",
     "Life metrics": "Yaşam ölçütleri",
     "Life metrics let you track metrics that are important to you.": "Yaşam ölçümleri, sizin için önemli olan ölçümleri izlemenizi sağlar.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Belgelere bağlantı",
     "List of addresses": "adres listesi",
     "List of addresses of the contacts in the vault": "Kasadaki kişilerin adreslerinin listesi",
@@ -612,6 +614,7 @@
     "Manage Team": "Ekibi Yönet",
     "Manage templates": "Şablonları yönet",
     "Manage users": "Kullanıcıları Yönet",
+    "Mastodon": "Mastodon",
     "Maybe one of these contacts?": "Belki bu kişilerden biri?",
     "mentor": "akıl hocası",
     "Middle name": "İkinci ad",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Kredi nedir?",
     "What permission should :name have?": ":name hangi izinlere sahip olmalıdır?",
     "What permission should the user have?": "Kullanıcının hangi izni olmalıdır?",
+    "Whatsapp": "Naber",
     "What should we use to display maps?": "Haritaları görüntülemek için ne kullanmalıyız?",
     "What would make today great?": "Bugünü harika yapan ne?",
     "When did the call happened?": "Arama ne zaman oldu?",
