--- a/lang/ur.json
+++ b/lang/ur.json
@@ -419,6 +419,7 @@
     "Exception:": "رعایت:",
     "Existing company": "موجودہ کمپنی",
     "External connections": "بیرونی روابط",
+    "Facebook": "فیس بک",
     "Family": "خاندان",
     "Family summary": "خاندانی خلاصہ",
     "Favorites": "پسندیدہ",
@@ -564,6 +565,7 @@
     "Life event types and categories": "زندگی کے واقعات کی اقسام اور زمرے",
     "Life metrics": "لائف میٹرکس",
     "Life metrics let you track metrics that are important to you.": "لائف میٹرکس آپ کو ان میٹرکس کو ٹریک کرنے دیتی ہیں جو آپ کے لیے اہم ہیں۔",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "دستاویزات سے لنک کریں۔",
     "List of addresses": "پتوں کی فہرست",
     "List of addresses of the contacts in the vault": "والٹ میں رابطوں کے پتوں کی فہرست",
@@ -612,6 +614,7 @@
     "Manage Team": "ٹیم کا انتظام کریں۔",
     "Manage templates": "ٹیمپلیٹس کا نظم کریں۔",
     "Manage users": "صارفین کا نظم کریں۔",
+    "Mastodon": "مستوڈن",
     "Maybe one of these contacts?": "شاید ان رابطوں میں سے ایک؟",
     "mentor": "اتالیق",
     "Middle name": "درمیانی نام",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "قرض کیا ہے؟",
     "What permission should :name have?": "کیا اجازت ہونی چاہیے :name؟",
     "What permission should the user have?": "صارف کو کیا اجازت ہونی چاہیے؟",
+    "Whatsapp": "واٹس ایپ",
     "What should we use to display maps?": "ہمیں نقشے دکھانے کے لیے کیا استعمال کرنا چاہیے؟",
     "What would make today great?": "آج کا دن کیا اچھا بنائے گا؟",
     "When did the call happened?": "کال کب ہوئی؟",
