--- a/lang/vi.json
+++ b/lang/vi.json
@@ -419,6 +419,7 @@
     "Exception:": "Ngoại lệ:",
     "Existing company": "công ty hiện tại",
     "External connections": "kết nối bên ngoài",
+    "Facebook": "Facebook",
     "Family": "Gia đình",
     "Family summary": "tóm tắt gia đình",
     "Favorites": "yêu thích",
@@ -564,6 +565,7 @@
     "Life event types and categories": "Các loại và danh mục sự kiện trong đời",
     "Life metrics": "số liệu cuộc sống",
     "Life metrics let you track metrics that are important to you.": "Số liệu cuộc sống cho phép bạn theo dõi các số liệu quan trọng đối với bạn.",
+    "LinkedIn": "LinkedIn",
     "Link to documentation": "Liên kết đến tài liệu",
     "List of addresses": "Danh sách địa chỉ",
     "List of addresses of the contacts in the vault": "Danh sách địa chỉ của những người liên hệ trong kho tiền",
@@ -612,6 +614,7 @@
     "Manage Team": "quản lý nhóm",
     "Manage templates": "Quản lý mẫu",
     "Manage users": "quản lý người dùng",
+    "Mastodon": "voi răng mấu",
     "Maybe one of these contacts?": "Có lẽ một trong những địa chỉ liên lạc?",
     "mentor": "người hướng dẫn",
     "Middle name": "Tên đệm",
@@ -1199,6 +1202,7 @@
     "What is the loan?": "Khoản vay là gì?",
     "What permission should :name have?": ":name nên có quyền gì?",
     "What permission should the user have?": "Người dùng nên có quyền gì?",
+    "Whatsapp": "Whatsapp",
     "What should we use to display maps?": "Chúng ta nên sử dụng cái gì để hiển thị bản đồ?",
     "What would make today great?": "Điều gì sẽ làm cho ngày hôm nay trở nên tuyệt vời?",
     "When did the call happened?": "Khi nào cuộc gọi xảy ra?",
